--- a/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 2/Module 1.ipynb
+++ b/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 2/Module 1.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "The first step for problem solving is to observe the game while it is being played. From this observation, questions may be arised, such as \"how does it flow?\", \"How many attempts can the user do?\", etc. Below, we show the game being played. \n",
     "\n",
-    "<img src=\"images/game_demo.gif\" width=\"50%\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/game_demo.gif\" width=\"50%\" align=\"center\"/>\n",
     "\n",
     "**Observations of the game**: The game asks the player to guess a password. There are a maximum of four guess attempts. The game checks the exact placement of letters in the guess against the secret password, and displays a hint. If you are successful, the game congratulates you. What else did you see? Can you think of a situation that didn't happen in the video but could happen in the game? For example, what happens when the player makes too many incorrect guesses? Now it is your turn to play the game. Play several times to gain a deeper understanding of hacking."
    ]
@@ -73,7 +73,7 @@
     "\n",
     "Create version description is the last subtask of *Understand version*. A description of a game is an explanation of what happens as the game is played and should include aspects, such as what the game looks like, how it changes, and how it responds to player actions. Reading your game description should give the reader a complete idea of how to play the game. \n",
     "\n",
-    "We can divide the description into two parts: *Objects and Actions*, and *Attributes*. *Objects and Actions* describes elements of the game, such as \"The game displays a header\", while *Attributes* describes features of the objects, such as \"It consists of two content lines followed by a blank line\". A complete description includes the sequence of objects and actions along with their correct attributes.\n",
+    "We can divide the description into two parts: *Objects and Actions*, and *Attributes*. *Objects and Actions* describes elements of the game, such as \"The game displays a header\", while *Attributes* describes features of the objects, such as \"It consists of two content lines followed by a blank line\". Each object can have up to five attributes decribing its content, location, size, colour and timing or temporal. The timing or temporal attribute of an object describes when it is displayed, altered or erased. A complete description includes the sequence of objects and actions along with their correct attributes.\n",
     "\n",
     "For the version 1 of the game, we have the following *Objects and Actions*, and *Attributes*:\n",
     "\n",
@@ -92,7 +92,75 @@
     "|                                                     | The first and the second content lines indicate failure      |\n",
     "|                                                     | The third content line is a prompt to press enter for exit   |\n",
     "|                                                     | It is directly below the prompt for guess                    |\n",
-    "\n"
+    "\n",
+    "Organizing the objects, actions and attributes according to the sequence of events in the game, we can generate the following description of the version 1 of the game.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/description_version_1.svg\" width=\"40%\" align=\"center\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create a Version Test Plan\n",
+    "\n",
+    "A test plan is a group of tests that are performed on a program to make sure that it performs as expected. For our first version, our test plans will only contain functional tests. Each functional test consists of an action and a group of questions, where the tester manually performs the action and uses the group of questions to evaluate whether the game responds to that action as described in the game description. To be completely correct, the tester must answer \"yes\" for all questions in the test, when testing the game. \n",
+    "\n",
+    "Tests can ensure that the game we create matches the game we are supposed to create. That is the reason why we create the test before we create our program, since it forces you to plan the behavior of the game before coding it. Tests introduce logic into the design by explicitly describing the potential actions that the player can take, and how the game should respond to each action before we need to code this logic. The tests also indicate what can go wrong. Finally, a test plan allows anyone to quickly find errors or missing features in a game, since no specialised knowledge of the program is necessary.\n",
+    "\n",
+    "For the version 1 of the game, we have the following *Actions* and *Questions* that must be temporally ordered before performing test. *Actions* contains all actions a tester can take to test the game, while *Questions* contains all the questions that a tester can use to evaluate whether the game responds correctly to the actions. It is important to note that the functional tests must be listed in the order that the action should be performed by the tester, and thus, *Actions* must be placed in a temporal order that creates a valid test plan.\n",
+    "\n",
+    "\n",
+    "| Actions                                                        | Questions                                                         |\n",
+    "| -------------------------------------------------------------- | ----------------------------------------------------------------- |\n",
+    "| Enter the incorrect password, SETTING, and press the enter key | Does the game display a password list?                            |\n",
+    "| Restart the program                                            | Does it consist of 13 content lines followed by a blank line?     |\n",
+    "| Enter the correct password, HUNTING, and press the enter key   | Does each content line contain one password?                      |\n",
+    "| Start the program                                              | Is it directly below the header?                                  |\n",
+    "| Press the enter key to end the program                         | Does the game display a header?                                   |\n",
+    "| Press the enter key to end the program                         | Does it consist of two content lines followed by a blank line?    |\n",
+    "|                                                                | Does the first content line indicate debug mode?                  |\n",
+    "|                                                                | Does the second content line indicate 1 attempt left?             |\n",
+    "|                                                                | Is it the top line of game output?                                |\n",
+    "|                                                                | Does the game prompt for a guess?                                 |\n",
+    "|                                                                | Does it indicate the player should enter a password?              |\n",
+    "|                                                                | Is it directly below the password list?                           |\n",
+    "|                                                                | Does the game wait for the enter key to be pressed?               |\n",
+    "|                                                                | Does the game display a failure outcome?                          |\n",
+    "|                                                                | Does it contain three content lines separated by two blank lines? |\n",
+    "|                                                                | Do the first and second content lines indicate failure?           |\n",
+    "|                                                                | Is the third content line a prompt to press enter for exit?       |\n",
+    "|                                                                | Is it directly below the prompt for guess?                        |\n",
+    "|                                                                | Does the game wait for the enter key to be pressed?               |\n",
+    "|                                                                | Does the program end?                                             |\n",
+    "\n",
+    "Organizing the actions and questions according to the sequence of events in the game, we can generate the following test plan of the version 1 of the game.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/testplan_version_1.svg\" width=\"80%\" align=\"center\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Algorithm\n",
+    "\n",
+    "The algorithm is the most precise artifact of your design. Is is composed by a sequence of steps that solves a problem. An algorithm is more precise than a test plan because its steps define the logic of the solution (it refines the test plan). Solution logic accounts for all potential situations that may occur in a problem and prescribes how to handle them. Although an algorithm is more precise than a test plan, it is less precise than code, since it is more human-readable than code and ignores unimportant details.\n",
+    "\n",
+    "As a test plan, the algorithm is performed in sequential order from first to last. This means the algorithm steps must be listed in the order they should be performed. Based on the game descriptions of our Hacking game, we have a list of keywords for actions and for objects that can be combined in order to generate steps for our algorithm. The keywords are: \n",
+    "\n",
+    "| Actions    | Objects         |\n",
+    "| ---------- | --------------- |\n",
+    "| Display    | End             |\n",
+    "| End        | Failure outcome |\n",
+    "| Prompt for | Game            |\n",
+    "|            | Guess           |\n",
+    "|            | Header          |\n",
+    "|            | Password list   |\n",
+    "\n",
+    "From these set of actions and objects, we can generate the following algorithm based on the descriptions.\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/algorithm_version_1.svg\" width=\"90%\" align=\"center\"/>"
    ]
   },
   {
@@ -216,7 +284,7 @@
     "\n",
     "**SOLUTION:** Below, there is an image with the corresponding dependences between features and their estimated effort between parentheses. As the sum of the efforts equals 27 and we want three versions, we should have ideally an effort of nine each version. Drawing the dependences, we can see that each row sums nine, and thus, each version should contain the elements in each row.\n",
     "\n",
-    "<img src=\"images/feature_effort.svg\" width=\"30%\" align=\"center\"/>\n"
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/feature_effort.svg\" width=\"30%\" align=\"center\"/>\n"
    ]
   },
   {
@@ -240,6 +308,74 @@
     "&#9744; When an incorrect password is entered, the game provides a hint.<br>\n",
     "&#9744; The game displays a success outcome if the player guess is correct.<br>\n",
     "&#9744; The game displays some symbolic characters on each password line."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**10 You have used the Create Game Process Diagram to complete part of Hacking Version 1.**\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/create_game_2.svg\" width=\"80%\" align=\"center\"/>\n",
+    "\n",
+    "**Which is the correct order of tasks that have been completed so far, using this process? If a task has sub-tasks, don't list the task itself, just list its subtasks, since completing the sub-tasks means that the task itself is completed.**\n",
+    "\n",
+    "&#9744; observe game version, play game version, create version description, create version test plan, create algorithm, observe game, play game<br>\n",
+    "&#9744; create game, understand game, create version, observe game, play game, create design, understand version, create version test plan, create algorithm, observe game version, play game version, create version description<br>\n",
+    "&#9744; create game, understand game, observe game, play game, understand version, create version test plan, create algorithm, observe game version, play game version, create version description, create version, create design<br>\n",
+    "&#9744; observe game version, play game version, create version description, observe game, play game, create version test plan, create algorithm<br>\n",
+    "&#9745; observe game, play game, observe game version, play game version, create version description, create version test plan, create algorithm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**11. For each problem solving strategy that is described in questions 1 to 5, select the kind of Problem Decomposition from the Problem Solving Ontology, that best describes the strategy.**\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/problem_solving_ontology.svg\" width=\"70%\" align=\"center\"/>\n",
+    "\n",
+    "**Solve a crossword puzzle by completing the words in the upper left corner first, rather than completing the words in numerical order.**\n",
+    "\n",
+    "&#9744; feature selection<br>\n",
+    "&#9744; problem refinement<br>\n",
+    "&#9744; temporal decomposition<br>\n",
+    "&#9744; experiential decomposition<br>\n",
+    "&#9745; spatial decomposition\n",
+    "\n",
+    "**12. Serve customers in the order that they arrive.**\n",
+    "\n",
+    "&#9744; feature selection<br>\n",
+    "&#9744; problem refinement<br>\n",
+    "&#9745; temporal decomposition<br>\n",
+    "&#9744; experiential decomposition<br>\n",
+    "&#9744; spatial decomposition\n",
+    "\n",
+    "**13. Estimate the area of this shape by treating it a single (red) rectangle. Then create a better estimate by treating it as three (purple) rectangles. Then use more rectangles (not shown) until the estimate is \"close enough\".**\n",
+    "\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/quiz_question_13.png\" width=\"40%\" align=\"center\"/>\n",
+    "\n",
+    "&#9744; feature selection<br>\n",
+    "&#9745; problem refinement<br>\n",
+    "&#9744; temporal decomposition<br>\n",
+    "&#9744; experiential decomposition<br>\n",
+    "&#9744; spatial decomposition\n",
+    "\n",
+    "**14. All the rooms in a house must be painted. Four colours must be used: blue, yellow, red, and white. The trim must be painted last and the trim is all white. Instead of painting one complete room at a time, paint everything that should be red first, then paint all of the blue, then all of the yellow. Paint the white trim and everything else that is white last.**\n",
+    "\n",
+    "&#9745; feature selection<br>\n",
+    "&#9744; problem refinement<br>\n",
+    "&#9744; temporal decomposition<br>\n",
+    "&#9744; experiential decomposition<br>\n",
+    "&#9744; spatial decomposition\n",
+    "\n",
+    "**15. Before entering a game competition for a new game, watch it being played by others, try to play the game, and then explain how the game is played to someone else to ensure you understand the rules and possible strategies.**\n",
+    "\n",
+    "&#9744; feature selection<br>\n",
+    "&#9744; problem refinement<br>\n",
+    "&#9744; temporal decomposition<br>\n",
+    "&#9745; experiential decomposition<br>\n",
+    "&#9744; spatial decomposition"
    ]
   }
  ],
