Module 7: Hacking version 7

--- a/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 8/Module 7.ipynb
+++ b/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 8/Module 7.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "Below, we add tests for each time the hint should appear as well as the embedded password. The complete test plan is as follows:\n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%208/images/testplan_version_7.svg\" width=\"90%\"/>"
+    "<img src=\"https://raw.githubusercontent.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%208/images/testplan_version_7.svg\" width=\"90%\"/>"
    ]
   },
   {
