--- a/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 03/Module 2.ipynb
+++ b/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 03/Module 2.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Python interpreter is responsable by interpreting the character sequence as one line of a Python statement. The first step of interpretation is called **lexical analysis**, where a character sequence is translated into a sequence of basic units called tokens. A token is a sequence of characters that has meaning as a basic language unit. Python has five different kinds of tokens: *delimiter*, *literal*, *identifier*, *operator*, and *keyword*, as illustred in the image below.\n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/python_interpreter.svg\" width=\"50%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/python_interpreter.svg\" width=\"50%\"/>\n",
     "\n",
     "*Delimiters* are analogous to punctuation in natural language (e.g., `)` and `(`) are delimiter tokens in Python. *Literals* and *Identifiers* are analogous to different parts of speech in natural language. For example, a literal string in a programming language is analogous to a noun in natural language, since a literal string also refers to a specific object. An *Identifier* is analogous to a pronoun in natural language, since you'll discover that the same identifier can refer to different objects in different parts of a program. For example, you have seen that the identifier `len` refers to the length function object in the `len('hello')` expression. However, it is possible to use the same identifier len elsewhere in a program to refer to a different object.\n",
     "\n",
@@ -85,7 +85,7 @@
     "\n",
     "A token is constructed from one or more characters where each character can be a *letter*, a *digit*, a *symbol*, a *special character*, or *whitespace* as illustred below. *Whitespace* is a space, a `[TAB]`, or a page break character also called a form feed. Python has five different kinds of tokens, *identifier* tokens, *delimiter* tokens, *literal* tokens, *operator* tokens, and *keyword* tokens. Each kind of token is either described by a simplified lexical rule or defined by a lexical table. \n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/python_lexical_analysis.svg\" width=\"60%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/python_lexical_analysis.svg\" width=\"60%\"/>\n",
     "\n",
     "An *identifier* is a name we use in Python code to refer to an object in memory. For example, `len` refers to a function object that computes the length of a sequence. Python recognizes *identifier* tokens using a simplified lexical rule. \"Starts with a letter or underscore, and is followed by zero or more letters, underscores or digits\". *Identifiers* are case-sensitive, so \"R2D2\" with uppercase letters is a different identifier than \"r2d2\" with lowercase letters.\n",
     "\n",
@@ -109,11 +109,11 @@
     "\n",
     "Syntax prescribes the format of each statement, *i.e.*, it specifies the order of the tokens in that statement. We use syntax diagrams to define which tokens are in a statement and what order they are in. We consider here three kinds of expressions: *literals*, *identifiers*, and *function calls*, as illustred in the image below. A syntax diagram contains states and transitions, where the start state is drawn as a circle and a terminal state is a state that represents a single token from a set of tokens, such as one delimiter token from the set of all delimiter tokens. A terminal state is drawn as a rounded rectangle and matches one token. Literal is a terminal state, which represents one token from any literal category, including *string*, *integer*, and *float*. *Identifier* is also a terminal state that represents one identifier token. A state that does not represent a single token from a set of tokens is called a *non-terminal state*, which is drawn as a rectangle and must be expanded using its own syntax diagram. A *function call* is a non-terminal state. A state that has a double border is called an *accepting state*. *Literal*, *identifier*, and *function call* are accepting states. Finally, the arrows are called transitions and by connecting states that transitions to find paths through the diagram. \n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/python_syntax_analysis.svg\" width=\"50%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/python_syntax_analysis.svg\" width=\"50%\"/>\n",
     "\n",
     "Below, there is an simplified example of a syntax diagram for function call that has either one argument expression or no argument. Begin at its start state, there is only one possible transition to an identifier token. \n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/function_call.svg\" width=\"50%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/function_call.svg\" width=\"50%\"/>\n",
     "\n",
     "The next token left paren should match the left paren state. The next token follows to the token right paren or the transition to the expression non-terminal state. In case of having an argument, we expand this state using the expression syntax diagram. The definition of expression is a recursive definition since an expression can be a function call, which itself contains an expression. There are three transitions from the start state for expression. One leads to the *literal* terminal state, one leads to the *identifier* terminal state, and one leads to the *function call* non-terminal state. Consider we match the *literal string*, we return to the path in the function call diagram to finally match the right paren. "
    ]
@@ -256,7 +256,7 @@
    "source": [
     "In addition to *literals*, Python uses *identifiers* to represent objects in an expression. An *identifier* represents an object in an expression by referencing that object. We say that an identifier is bound to an object, and use an arrow to denote the binding as illustred in the image below. For example, the *identifier* `len` (number below the `len` function in memory) represents a function object. An identifier is a persistent representation of an object, while all of the expressions in a shell or program are evaluated. A literal is only a temporary representation, until the object it represents is created.\n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/namespace.svg\" width=\"40%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/namespace.svg\" width=\"40%\"/>\n",
     "\n",
     "Python uses a *namespace* to allow identifiers to persist during evaluation. A *namespace* associates each name that appears in a Python expression with the object that it is bound to. Thus, the `len` identifier is associated or bound to a function object. The step that connects a name in a Python expression to its object in memory is called dereferencing. \n",
     "\n",
@@ -302,7 +302,7 @@
     "\n",
     "Consider the *function call* `len('hello')`. Before the interpreter evaluate the semantic rules, the *identifier* `len` is prebound to the builtin `len` function object as illustred in the image below. Now, the Python interpreter applies the semantic rule for *function call* expressions by evaluating the identifier `len` (step 1). The semantic rule for an identifier expression looks for `len` in the *namespace* and checks whether it is prebound to a built in function. It finds it and dereferences `len` to obtain the length function object. The next step, the Interpreter evaluates the expression ''hello'' (step 2). The semantic rule for *literals* evaluates this expression by creating a new string object. In step 3, we pass this argument object into the length function. Finally, the interpreter evaluates the code in the length function (step 4) and returns the integer `5` object. This five object is displayed in the shell. \n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/namespace_len.svg\" width=\"30%\"/>"
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/namespace_len.svg\" width=\"30%\"/>"
    ]
   },
   {
@@ -376,7 +376,7 @@
     "\n",
     "After generating the algorithm, the next subtask in create version is create program. Writing code is a refinement since it is more precise than the algorithm. The three subtask of creating a program are **write code**, **test code**, and **debug code** as illustrated in the diagram below. *Writing code* is the process of translating your algorithm into a programming language. Each step of the algorithm will become one or more sequential statements in some programming language. \n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/create_game_3.svg\" width=\"80%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/create_game_3.svg\" width=\"80%\"/>\n",
     "\n",
     "Once you have some code written, you need to test it. *Testing* is running your code to determine which errors exist in the program. You test code by running it and determining what errors have occurred. You will make many errors when you write a Python program. *Debugging* is the process of discovering exactly what part of the code cause the error and deciding how to fix it. Debugging is discovering which program statements cause the errors and analyzing how to fix those statements. "
    ]
@@ -391,7 +391,7 @@
     "\n",
     "*Reflection* has three subtasks: **review code**, **reflection activity**, and **identify solution issues** as illustred in the image below. In **review code**, you should inspect your program statements one at a time and the order that they are run to gain a deeper understanding of the program you wrote. Your goal is to understand how the statements work together to implement the game - you can use the *debugger* (`%debug`)to trace the way that the Python interpreter runs a program. *Tracing* shows the sequential statement by statement evaluation, that the Python interpreter does by default.\n",
     "\n",
-    "<img src=\"images/create_game_4.svg\" width=\"80%\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/create_game_4.svg\" width=\"80%\" align=\"center\"/>\n",
     "\n",
     "*Code quality* is enforced using software quality tests. These tests are applied in conjunction with the functional tests that you have already created and used. Functional tests demonstrate that the code works as intended. The software quality tests ensure that you have made good coding choices and used best programming practices. For this version of the game, you will only use one software quality tests. To check your comments, you must test two kinds of comments: **program comments** and **block comments**. A *program comment* is a summary of what your program does. It must be included at the start of your program. A *block comment* appears on one line above each group of statements that comprise a logical task. It must provide a short explanation of the code that follows it.\n",
     "\n",
@@ -528,7 +528,7 @@
     "\n",
     "**Here is a grammar for this simple subset of English. There is no punctuation in this language.** \n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/quiz_question_4.svg\" width=\"70%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/quiz_question_4.svg\" width=\"70%\"/>\n",
     "\n",
     "**Select the appropriate result of trying to interpret this sequence of tokens as a valid statement in this language.**\n",
     "\n",
@@ -652,7 +652,7 @@
    "source": [
     "The next problems consider the following diagrams and abbreviations.\n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%203/images/call_statements.svg\" width=\"100%\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2003/images/call_statements.svg\" width=\"100%\"/>\n",
     "\n",
     "If a syntax diagram is started, a left angle bracket indicates that it has started and its two letter abbreviation indicates which rule. When a syntax diagram is completed, this is indicated by its two letter abbreviation, followed by a right angle bracket. However, every syntax diagram completes at an accepting state so the @ character and the two letter abbreviation for the accepting state are appended. \n",
     "\n",
@@ -1129,7 +1129,7 @@
    "source": [
     "**39. Create the program Hacking Version 1 following the sequence of steps illustred below.**\n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/hacking_1.gif\" width=\"50%\"/>"
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2002/images/hacking_1.gif\" width=\"50%\"/>"
    ]
   },
   {
@@ -1458,7 +1458,7 @@
     "---\n",
     "You have used the Create Game Process Diagram to complete Hacking Version 1.\n",
     "\n",
-    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%202/images/create_game.svg\" width=\"80%\" align=\"center\"/>\n",
+    "<img src=\"https://cdn.rawgit.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2002/images/create_game.svg\" width=\"80%\" align=\"center\"/>\n",
     "\n",
     "**47. Which is the correct order of tasks that have been completed so far, using this process? If a task has sub-tasks, don't list the task itself, just list its subtasks, since completing the sub-tasks means that the task itself is completed.**\n",
     "\n",
