--- a/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 10/Module 9.ipynb
+++ b/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 10/Module 9.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "Similar to the first and second versions, the dots move and bounce when they hit the edges. The game does not stop when the dots collide. In the third version, the scoreboard appears in the corner displaying the seconds since the game has started. When I press the left mouse button, the dots disappear and reappear in different locations in the window. They teleport. Pressing the close button on the window closes the window. The sequence below illustrates the game.\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2010/images/game_v3.gif\" width=\"60%\" align=\"center\"/>"
+    "<img src=\"images/game_v3.gif\" width=\"60%\" align=\"center\"/>"
    ]
   },
   {
@@ -807,7 +807,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
