--- a/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 11/Module 10.ipynb
+++ b/Coursera/University of Alberta/Problem Solving, Python Programming, and Video Games/Week 11/Module 10.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "The complete algorithm is as illustred below.\n",
     "\n",
-    "<img src=\"https://raw.githubusercontent.com/rogergranada/MOOCs/master/Coursera/University%20of%20Alberta/Problem%20Solving%2C%20Python%20Programming%2C%20and%20Video%20Games/Week%2010/images/algorithm_version_4.svg\" width=\"100%\" align=\"center\"/>"
+    "<img src=\"images/algorithm_version_4.svg\" width=\"100%\" align=\"center\"/>"
    ]
   },
   {
@@ -848,7 +848,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
